--- a/public_html/cfg/TEST24.HTML
+++ b/public_html/cfg/TEST24.HTML
@@ -21,34 +21,34 @@
                      {
                         "sys":"call", "name":"SYS::wr", "args":[
                            {"sys":"const", "val":{"sys":"val", "type":"string", "v":"Ptr1 Before: "}},
-                           {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.[$.vars.nidx]->(http://localhost:8000/)"}},
+                           {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.[$.vars.nidx]->(http://localhost:8000/?jsonpl=true)"}},
                            {"sys":"const", "val":{"sys":"val", "type":"string", "v":""}}                            
                         ]
                      },
                      {
                         "sys":"asgn",
-                        "left":{"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.[$.vars.nidx]->(http://localhost:8000/)"}},
+                        "left":{"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.[$.vars.nidx]->(http://localhost:8000/?jsonpl=true)"}},
                         "op":{"sys":"op", "type":"asgn", "v":"="},
                         "right":{"sys":"const", "val":{"sys":"val", "type":"int", "v":"200"}}
                      },
                      {
                         "sys":"asgn",
-                        "url":"http://localhost:8000/",
-                        "left":{"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.[$.vars.nidx]->(http://localhost:8000/)"}},
+                        "url":"http://localhost:8000/?jsonpl=true",
+                        "left":{"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.[$.vars.nidx]->(http://localhost:8000/?jsonpl=true)"}},
                         "op":{"sys":"op", "type":"asgn", "v":"="},
                         "right":{"sys":"const", "val":{"sys":"val", "type":"int", "v":"200"}}
                      },
                      {
                         "sys":"asgn",
-                        "url":"http://localhost:8000/",
-                        "left":{"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.1->(http://localhost:8000/)"}},
+                        "url":"http://localhost:8000/?jsonpl=true",
+                        "left":{"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ar1.1->(http://localhost:8000/?jsonpl=true)"}},
                         "op":{"sys":"op", "type":"asgn", "v":"="},
                         "right":{"sys":"const", "val":{"sys":"val", "type":"int", "v":"200"}}
                      },
                      {
                         "sys":"asgn",
-                        "url":"http://localhost:8000/",
-                        "left":{"sys":"ref", "val":{"sys":"val", "type":"int", "v":"<#.vars.ptr1>->(http://localhost:8000/)"}},
+                        "url":"http://localhost:8000/?jsonpl=true",
+                        "left":{"sys":"ref", "val":{"sys":"val", "type":"int", "v":"<#.vars.ptr1>->(http://localhost:8000/?jsonpl=true)"}},
                         "op":{"sys":"op", "type":"asgn", "v":"="},
                         "right":{"sys":"const", "val":{"sys":"val", "type":"int", "v":"200"}}
                      },                     
@@ -66,7 +66,7 @@
           * Desc: A function to init the test page.
           */
          function init() {
-            var desc = "A test to demonstrate allocating a new array variable and getting its value.";
+            var desc = "A test to demonstrate using url references in {ref} objects and {asgn} objects.";
             var txtArea = document.getElementById('message');
          
             jsonPlState.prototype.wr = function(s) {
