Updated project with the latest versions of the JS and Java 0.5.1 interpreters after a funn sync and test of new functionality. I'm working on finishing up the C# sync and then subsequent scrutiny of the results.

--- a/public_html/cfg/TEST27.HTML
+++ b/public_html/cfg/TEST27.HTML
@@ -4,7 +4,7 @@
       <script type="text/javascript" src="../exec4.js"></script>
       <script type="text/javascript">
          var code = {
-            "sys":"class", "name":"test26",
+            "sys":"class", "name":"test27",
             "call":{"sys":"call", "name":"main", "args":[]},
             "vars":[
                {
@@ -14,7 +14,7 @@
                      "type":"string",
                      "v":"undefined string value!"
                   },
-                  pubs: [
+                  "pubs": [
                      "http://localhost:8000/?jsonpl=true"
                   ]
                }               
