Updated project with the latest changes to support pubs on function calls. Updates to the NodeJS servers, the JS http request functions, etc.

--- a/public_html/cfg/TEST27.HTML
+++ b/public_html/cfg/TEST27.HTML
@@ -36,6 +36,9 @@
                      {
                         "sys":"return", "val":{"sys":"const", "val":{"sys":"val", "type":"bool", "v":"true"}}
                      }
+                  ],
+                  "pubs": [
+                     "http://localhost:8000/?jsonpl=true&func=true"
                   ]
                }
             ],
