Updated project with the programming language demo programs and slight fixes, adjustments during testing. Focusing on JS interpreter first.

--- a/public_html/lang_demo/PRG006_CallExample1.HTML
+++ b/public_html/lang_demo/PRG006_CallExample1.HTML
@@ -1,5 +1,6 @@
 <html>
     <head>
+    <link rel="stylesheet" href="style.css"> 
     <title>JsonPL Program: PRG006_CallExample1.HTML</title>
     <script type="text/javascript" src="../EXEC4.JS"></script>
     <script type="text/javascript">
@@ -155,7 +156,7 @@
 
         <span style="font-size:18px; font-weight:bold;">Source:</span>
         <br/>
-<textarea cols="90" rows="15" id="source" style="font-size:16px;">
+<textarea cols="90" rows="5" id="source" style="font-size:16px;">
 </textarea>
         <br/><br/>
 
@@ -178,7 +179,9 @@
         <div style="float:left; clear:both;">
             <span style="font-size:18px; font-weight:bold;">Desc:</span>
             <span style="font-size:18px; font-weight:normal;">
-                This program demonstrates using 
+                This program demonstrates using the {call} object to call a function, main2, from another function, main.
+                Note that this program also demonstrates using local function variables with the same name in two different functions.
+                It also shows assignment of function arguments to local function variables.
             </span>            
         </div>
     </body>
