--- a/public_html/lang_demo/PRG013_CallExample8.HTML
+++ b/public_html/lang_demo/PRG013_CallExample8.HTML
@@ -1,11 +1,11 @@
 <html>
     <head>
     <link rel="stylesheet" href="style.css">         
-    <title>JsonPL Program: PRG009_CallExample4.HTML</title>
+    <title>JsonPL Program: PRG013_CallExample8.HTML</title>
     <script type="text/javascript" src="../EXEC4.JS"></script>
     <script type="text/javascript">
         try {
-            var code = {"sys":"class", "name":"CallExample4",
+            var code = {"sys":"class", "name":"CallExample8",
                 "ret":{"sys":"val", "type":"bool", "v":"false"},
                 "call":{"sys":"call", "name":"main", "args":[]},
                 "classes":[
@@ -35,7 +35,7 @@
                     }
                 ],
                 "vars":[
-                    {"sys":"var", "name":"ptr1", "val":{"sys":"val", "type":"string", "v":"@.InnerClass.main2"}}
+                    {"sys":"var", "name":"ptr1", "val":{"sys":"val", "type":"string", "v":"#.classes.InnerClass.main2"}}
                 ],
                 "funcs":[
                     {"sys":"func", "name":"main",
@@ -51,8 +51,8 @@
                                     {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"#.vars.ptr1"}}
                                 ]
                             },
-                            {"sys":"call", "name":"@.InnerClass.main2", "args":[]},
-                            {"sys":"call", "name":{"sys":"const", "val":{"sys":"val", "type":"string", "v":"@.InnerClass.main2"}}, "args":[]},
+                            {"sys":"call", "name":"#.classes.InnerClass.main2", "args":[]},
+                            {"sys":"call", "name":{"sys":"const", "val":{"sys":"val", "type":"string", "v":"#.classes.InnerClass.main2"}}, "args":[]},
                             {"sys":"call", "name":{"sys":"ref", "val":{"sys":"val", "type":"string", "v":"#.vars.ptr1"}}, "args":[]},
                             {"sys":"call", "name":{"sys":"ref", "val":{"sys":"val", "type":"string", "v":"[$.vars.ptr1]"}}, "args":[]},
                             {"sys":"call", "name":{"sys":"ref", "val":{"sys":"val", "type":"string", "v":"<$.vars.ptr1>"}}, "args":[]},
@@ -132,24 +132,24 @@
 
         <div style="float:left; clear:both;">
             <span style="font-size:18px; font-weight:bold;">Title:</span>
-            <span style="font-size:18px; font-weight:normal;">JsonPL Program: PRG009 - CallExample4</span>
+            <span style="font-size:18px; font-weight:normal;">JsonPL Program: PRG013 - CallExample8</span>
         </div>
         <div style="float:left; clear:both;">
             <span style="font-size:18px; font-weight:bold;">File:</span>
-            <span style="font-size:18px; font-weight:normal;">PRG009_CallExample4.HTML</span>
+            <span style="font-size:18px; font-weight:normal;">PRG013_CallExample8.HTML</span>
         </div>
         <div style="float:left; clear:both;">
             <span style="font-size:18px; font-weight:bold;">Code:</span>
-            <span style="font-size:18px; font-weight:normal;">PRG009</span>
+            <span style="font-size:18px; font-weight:normal;">PRG013</span>
         </div>
         <div style="float:left; clear:both;">
             <span style="font-size:18px; font-weight:bold;">Name:</span>
-            <span style="font-size:18px; font-weight:normal;">CallExample4</span>
+            <span style="font-size:18px; font-weight:normal;">CallExample8</span>
         </div>
         <div style="float:left; clear:both;">
             <span style="font-size:18px; font-weight:bold;">Desc:</span>
             <span style="font-size:18px; font-weight:normal;">
-                This program demonstrates calling a specific function, specified in the short reference path, of a library class.
+                This program demonstrates calling a specific function, specified in the full reference path, of a library class.
                 Library classes are stored in the {class} object's 'classes' attribute. Calling a library class invoke's that {class} object's
                 function as described by the 'call' attribute.
             </span>            
