--- a/public_html/lang_demo/PRG003_ArgExample3.HTML
+++ b/public_html/lang_demo/PRG003_ArgExample3.HTML
@@ -1,5 +1,6 @@
 <html>
     <head>
+    <link rel="stylesheet" href="style.css"> 
     <title>JsonPL Program: PRG003_ArgExample3.HTML</title>
     <script type="text/javascript" src="../EXEC4.JS"></script>
     <script type="text/javascript">
@@ -44,6 +45,14 @@
                                     {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"$.vars.intVar2"}}
                                 ]
                             },
+                            {"sys":"call", "name":"SYS::wr", "args":[
+                                    {"sys":"const", "val":{"sys":"val", "type":"string", "v":"Found argument values"}},
+                                    
+                                    {"sys":"const", "val":{"sys":"val", "type":"string", "v":", "}},
+                                    {"sys":"const", "val":{"sys":"val", "type":"string", "v":"$.args.intArg1 = "}},                                    
+                                    {"sys":"ref", "val":{"sys":"val", "type":"int", "v":"$.args.intArg1"}}
+                                ]
+                            },                            
                             {"sys":"return", "val":{"sys":"const", "val":{"sys":"val", "type":"int", "v":"1"}}}
                         ]
                     }
@@ -114,7 +123,7 @@
 
         <span style="font-size:18px; font-weight:bold;">Source:</span>
         <br/>
-<textarea cols="90" rows="15" id="source" style="font-size:16px;">
+<textarea cols="90" rows="5" id="source" style="font-size:16px;">
 </textarea>
         <br/><br/>
 
@@ -137,12 +146,11 @@
         <div style="float:left; clear:both;">
             <span style="font-size:18px; font-weight:bold;">Desc:</span>
             <span style="font-size:18px; font-weight:normal;">
-                This program demonstrates simple use of arguments with the {class} 
-                object's default function, 'main'. In this case a single argument is 
-                passed into the default function call by using a {const} value object.
-                The {const}'s value is passed to the 'main' function via the argument, 
-                'intArg1', defined in the 'main' function's {func} object. This value is subsequently
-                assigned to the class variables, 'intVar1', and the local variable, 'intVar2'.
+                This program demonstrates simple use of arguments with the {class} object's default function, 'main'. 
+                In this case a single argument, an integer constant with a value of 10, is passed into the default 
+                function {call} object in the {class}'s 'call' attribute. The {const}'s value is passed to the 'main' 
+                function via the argument, 'intArg1', defined in the 'main' function's {func} object definition. 
+                This value is subsequently assigned to the class variables, 'intVar1', and the local variable, 'intVar2'.
             </span>            
         </div>
     </body>
