Updated project with the latest language demonstration programs added to the JS version of the interpreter. The java and C# versions will be synced up once the full set of language demonstration programs has been completed.

--- a/public_html/lang_demo/PRG015_DeclarationExampleAdv2.HTML
+++ b/public_html/lang_demo/PRG015_DeclarationExampleAdv2.HTML
@@ -2,35 +2,20 @@
 <html>
     <head>
     <link rel="stylesheet" href="style.css"> 
-    <title>JsonPL Program: PRG014_DeclarationExampleAdv1.HTML</title>
+    <title>JsonPL Program: PRG015_DeclarationExampleAdv2.HTML</title>
     <script type="text/javascript" src="../EXEC4.JS"></script>
     <script type="text/javascript">
         try {
-            var code = {"sys":"class", "name":"DeclarationExampleAdv1",
+            //TODO: finish this
+            var code = {"sys":"class", "name":"DeclarationExampleAdv2",
                 "ret":{"sys":"val", "type":"int", "v":"0"},
                 "call":{"sys":"call", "name":"main", "args":[]},
                 "classes":[],
                 "vars":[
                     {"sys":"var", "name":"classVarIntArray", "val":{"sys":"val", "type":"int[]", "strict":"true", "len":"2", "v":[
                                 {"sys":"var", "name":"itm0", "val":{"sys":"val", "type":"int", "v":"1"}},
-                                {"sys":"var", "name":"itm1", "val":{"sys":"val", "type":"int", "v":"0"}}
-                            ]
-                        }
-                    },
-                    {"sys":"var", "name":"classVarFloatArray", "val":{"sys":"val", "type":"float[]", "strict":"true", "len":"2", "v":[
                                 {"sys":"var", "name":"itm0", "val":{"sys":"val", "type":"float", "v":"0.0"}},
-                                {"sys":"var", "name":"itm1", "val":{"sys":"val", "type":"float", "v":"1.0"}}
-                            ]
-                        }
-                    },
-                    {"sys":"var", "name":"classVarBoolArray", "val":{"sys":"val", "type":"bool[]", "strict":"true", "len":"2", "v":[
                                 {"sys":"var", "name":"itm0", "val":{"sys":"val", "type":"bool", "v":"false"}},
-                                {"sys":"var", "name":"itm1", "val":{"sys":"val", "type":"bool", "v":"true"}}
-                            ]
-                        }
-                    },
-                    {"sys":"var", "name":"classVarStringArray", "val":{"sys":"val", "type":"string[]", "strict":"true", "len":"2", "v":[
-                                {"sys":"var", "name":"itm0", "val":{"sys":"val", "type":"string", "v":"0.0"}},
                                 {"sys":"var", "name":"itm1", "val":{"sys":"val", "type":"string", "v":"1.0"}}
                             ]
                         }
@@ -43,24 +28,8 @@
                         "vars":[
                             {"sys":"var", "name":"funcVarIntArray", "val":{"sys":"val", "type":"int[]", "strict":"true", "len":"2", "v":[
                                         {"sys":"var", "name":"itm0", "val":{"sys":"val", "type":"int", "v":"1"}},
-                                        {"sys":"var", "name":"itm1", "val":{"sys":"val", "type":"int", "v":"0"}}
-                                    ]
-                                }
-                            },
-                            {"sys":"var", "name":"funcVarFloatArray", "val":{"sys":"val", "type":"float[]", "strict":"true", "len":"2", "v":[
                                         {"sys":"var", "name":"itm0", "val":{"sys":"val", "type":"float", "v":"0.0"}},
-                                        {"sys":"var", "name":"itm1", "val":{"sys":"val", "type":"float", "v":"1.0"}}
-                                    ]
-                                }
-                            },
-                            {"sys":"var", "name":"funcVarBoolArray", "val":{"sys":"val", "type":"bool[]", "strict":"true", "len":"2", "v":[
                                         {"sys":"var", "name":"itm0", "val":{"sys":"val", "type":"bool", "v":"false"}},
-                                        {"sys":"var", "name":"itm1", "val":{"sys":"val", "type":"bool", "v":"true"}}
-                                    ]
-                                }
-                            },
-                            {"sys":"var", "name":"funcVarStringArray", "val":{"sys":"val", "type":"string[]", "strict":"true", "len":"2", "v":[
-                                        {"sys":"var", "name":"itm0", "val":{"sys":"val", "type":"string", "v":"0.0"}},
                                         {"sys":"var", "name":"itm1", "val":{"sys":"val", "type":"string", "v":"1.0"}}
                                     ]
                                 }
@@ -143,19 +112,19 @@
 
         <div style="float:left; clear:both;">
             <span style="font-size:18px; font-weight:bold;">Title:</span>
-            <span style="font-size:18px; font-weight:normal;">JsonPL Program: PRG014 - DeclarationExampleAdv1</span>
+            <span style="font-size:18px; font-weight:normal;">JsonPL Program: PRG015 - DeclarationExampleAdv2</span>
         </div>
         <div style="float:left; clear:both;">
             <span style="font-size:18px; font-weight:bold;">File:</span>
-            <span style="font-size:18px; font-weight:normal;">PRG014_DeclarationExampleAdv1.HTML</span>
+            <span style="font-size:18px; font-weight:normal;">PRG015_DeclarationExampleAdv2.HTML</span>
         </div>
         <div style="float:left; clear:both;">
             <span style="font-size:18px; font-weight:bold;">Code:</span>
-            <span style="font-size:18px; font-weight:normal;">PRG014</span>
+            <span style="font-size:18px; font-weight:normal;">PRG015</span>
         </div>
         <div style="float:left; clear:both;">
             <span style="font-size:18px; font-weight:bold;">Name:</span>
-            <span style="font-size:18px; font-weight:normal;">DeclarationExampleAdv1</span>
+            <span style="font-size:18px; font-weight:normal;">DeclarationExampleAdv2</span>
         </div>
         <div style="float:left; clear:both;">
             <span style="font-size:18px; font-weight:bold;">Desc:</span>
