Updated project with the latest changes to support new language demo programs for the JS version of the interpreter. Java and C# will be synced soon.

--- a/public_html/lang_demo/INDEX.HTML
+++ b/public_html/lang_demo/INDEX.HTML
@@ -126,6 +126,42 @@
                     This program demonstrates calling a specific function, specified in the full reference path, of a library class.
                 </span>
             </li>
+            <li>
+                <span class="link">
+                <a target="new" href="PRG012_CallExample7.HTML">PRG012_CallExample7</a>
+                </span>
+                <br/>
+                <span class="desc">
+                    This program demonstrates calling the default function, 'call' attribute of the {class} object, of a library class using a full reference string.
+                </span>
+            </li>
+            <li>
+                <span class="link">
+                <a target="new" href="PRG014_DeclarationExampleAdv1.HTML">PRG014_DeclarationExampleAdv1</a>
+                </span>
+                <br/>
+                <span class="desc">
+                    This program demonstrates the declaration of arrays using the basic, strict, form.
+                </span>
+            </li>
+            <li>
+                <span class="link">
+                <a target="new" href="PRG015_DeclarationExampleAdv2.HTML">PRG015_DeclarationExampleAdv2</a>
+                </span>
+                <br/>
+                <span class="desc">
+                    This program demonstrates the declaration of arrays using the advanced, non-strict, form.
+                </span>
+            </li>  
+            <li>
+                <span class="link">
+                <a target="new" href="PRG016_DeclarationExampleBasic.HTML">PRG016_DeclarationExampleBasic</a>
+                </span>
+                <br/>
+                <span class="desc">
+                    This program demonstrates the declaration basic data type variables.
+                </span>
+            </li>
         </ul>
     </body>
 </html>
