--- a/public_html/lang_demo/PRG014_DeclarationExampleAdv1.HTML
+++ b/public_html/lang_demo/PRG014_DeclarationExampleAdv1.HTML
@@ -160,7 +160,7 @@
         <div style="float:left; clear:both;">
             <span style="font-size:18px; font-weight:bold;">Desc:</span>
             <span style="font-size:18px; font-weight:normal;">
-                ...
+                This program demonstrates the declaration of arrays using the basic, strict, form.
             </span>            
         </div>
     </body>
